// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectField select option should display max TAGS_LIMIT options 1`] = `
<div
  class="MultiSelectField"
>
  <div
    class="container"
  >
    <div
      class="inputContainer multiSelectOptionField-dropdown"
    >
      <div
        class="dropdown"
      >
        <div
          aria-expanded="false"
          aria-haspopup="true"
          class=""
          data-toggle="dropdown"
        >
          <input
            autocomplete="off"
            class="input"
            placeholder="Add tags..."
            value=""
          />
        </div>
        <div
          aria-hidden="true"
          class="options dropdown-menu"
          role="menu"
          tabindex="-1"
        >
          <button
            class="option option--focused dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag0
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag1
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag2
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag3
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag4
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag5
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag6
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag7
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag8
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag9
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag10
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag11
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag12
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag13
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag14
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag15
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag16
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag17
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag18
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag19
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag20
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag21
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag22
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag23
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag24
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag25
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag26
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag27
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag28
            </span>
          </button>
          <button
            class="option dropdown-item"
            role="menuitem"
            tabindex="0"
            type="button"
          >
            <span>
              tag29
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MultiSelectField should init state with custom props 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "value": "first",
    },
    Object {
      "label": "Second",
      "value": "second",
    },
    Object {
      "label": "Third",
      "value": "third",
    },
  ],
  "input": "",
  "isFocused": false,
}
`;

exports[`MultiSelectField should render a multi select input with custom props 1`] = `
<MultiSelectOptionsField
  allowCustomOptions={false}
  matchInput={false}
  onChange={[Function]}
  options={
    Array [
      Object {
        "label": "First",
        "value": "first",
      },
      Object {
        "label": "Second",
        "value": "second",
      },
      Object {
        "label": "Third",
        "value": "third",
      },
    ]
  }
  plural="tags"
  selectedOptions={Array []}
  singular="tag"
>
  <div
    className="MultiSelectField"
  >
    <div
      className="container"
      onClick={[Function]}
    >
      <Dropdown
        isFocused={false}
        menu={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onDelete={[Function]}
        onFocus={[Function]}
        onSelect={[Function]}
        options={
          Array [
            Object {
              "label": "First",
              "value": "first",
            },
            Object {
              "label": "Second",
              "value": "second",
            },
            Object {
              "label": "Third",
              "value": "third",
            },
          ]
        }
        placeholder="Add tags..."
        value=""
      >
        <div
          className="inputContainer multiSelectOptionField-dropdown"
        >
          <UncontrolledDropdown
            isOpen={false}
          >
            <Dropdown
              a11y={true}
              active={false}
              addonType={false}
              direction="down"
              inNavbar={false}
              isOpen={false}
              nav={false}
              setActiveFromChild={false}
              toggle={[Function]}
            >
              <Manager>
                <div
                  className="dropdown"
                  onKeyDown={[Function]}
                >
                  <DropdownToggle
                    aria-haspopup={true}
                    color="secondary"
                    data-toggle="dropdown"
                    tag="div"
                  >
                    <Reference>
                      <InnerReference
                        setReferenceNode={[Function]}
                      >
                        <div
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          data-toggle="dropdown"
                          onClick={[Function]}
                        >
                          <Input
                            isFocused={false}
                            onBlur={[Function]}
                            onChange={[Function]}
                            onDelete={[Function]}
                            onDown={[Function]}
                            onFocus={[Function]}
                            onSubmit={[Function]}
                            onUp={[Function]}
                            placeholder="Add tags..."
                            value=""
                          >
                            <input
                              autoComplete="off"
                              className="input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Add tags..."
                              value=""
                            />
                          </Input>
                        </div>
                      </InnerReference>
                    </Reference>
                  </DropdownToggle>
                  <DropdownMenu
                    className="options"
                    flip={true}
                    tag="div"
                  >
                    <div
                      aria-hidden={true}
                      className="options dropdown-menu"
                      role="menu"
                      tabIndex="-1"
                    >
                      <Menu
                        activeIndex={0}
                        onActivate={[Function]}
                        onSelect={[Function]}
                        options={
                          Array [
                            Object {
                              "label": "First",
                              "value": "first",
                            },
                            Object {
                              "label": "Second",
                              "value": "second",
                            },
                            Object {
                              "label": "Third",
                              "value": "third",
                            },
                          ]
                        }
                      >
                        <MenuItem
                          isActive={true}
                          key="0"
                          onActivate={[Function]}
                          onSelect={[Function]}
                        >
                          <DropdownItem
                            className="option option--focused"
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            tag="button"
                            toggle={true}
                            type="button"
                          >
                            <button
                              className="option option--focused dropdown-item"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              role="menuitem"
                              tabIndex="0"
                              type="button"
                            >
                              <span>
                                First
                              </span>
                            </button>
                          </DropdownItem>
                        </MenuItem>
                        <MenuItem
                          isActive={false}
                          key="1"
                          onActivate={[Function]}
                          onSelect={[Function]}
                        >
                          <DropdownItem
                            className="option"
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            tag="button"
                            toggle={true}
                            type="button"
                          >
                            <button
                              className="option dropdown-item"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              role="menuitem"
                              tabIndex="0"
                              type="button"
                            >
                              <span>
                                Second
                              </span>
                            </button>
                          </DropdownItem>
                        </MenuItem>
                        <MenuItem
                          isActive={false}
                          key="2"
                          onActivate={[Function]}
                          onSelect={[Function]}
                        >
                          <DropdownItem
                            className="option"
                            onMouseDown={[Function]}
                            onMouseEnter={[Function]}
                            tag="button"
                            toggle={true}
                            type="button"
                          >
                            <button
                              className="option dropdown-item"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseEnter={[Function]}
                              role="menuitem"
                              tabIndex="0"
                              type="button"
                            >
                              <span>
                                Third
                              </span>
                            </button>
                          </DropdownItem>
                        </MenuItem>
                      </Menu>
                    </div>
                  </DropdownMenu>
                </div>
              </Manager>
            </Dropdown>
          </UncontrolledDropdown>
        </div>
      </Dropdown>
    </div>
  </div>
</MultiSelectOptionsField>
`;

exports[`MultiSelectField should render a select input with default props 1`] = `
<MultiSelectOptionsField
  allowCustomOptions={false}
  matchInput={false}
  onChange={[Function]}
  options={Array []}
  plural="items"
  selectedOptions={Array []}
  singular="item"
>
  <div
    className="MultiSelectField"
  >
    <div
      className="container"
      onClick={[Function]}
    >
      <Dropdown
        isFocused={false}
        menu={[Function]}
        onBlur={[Function]}
        onChange={[Function]}
        onDelete={[Function]}
        onFocus={[Function]}
        onSelect={[Function]}
        options={Array []}
        placeholder="Add items..."
        value=""
      >
        <div
          className="inputContainer multiSelectOptionField-dropdown"
        >
          <UncontrolledDropdown
            isOpen={false}
          >
            <Dropdown
              a11y={true}
              active={false}
              addonType={false}
              direction="down"
              inNavbar={false}
              isOpen={false}
              nav={false}
              setActiveFromChild={false}
              toggle={[Function]}
            >
              <Manager>
                <div
                  className="dropdown"
                  onKeyDown={[Function]}
                >
                  <DropdownToggle
                    aria-haspopup={true}
                    color="secondary"
                    data-toggle="dropdown"
                    tag="div"
                  >
                    <Reference>
                      <InnerReference
                        setReferenceNode={[Function]}
                      >
                        <div
                          aria-expanded={false}
                          aria-haspopup={true}
                          className=""
                          data-toggle="dropdown"
                          onClick={[Function]}
                        >
                          <Input
                            isFocused={false}
                            onBlur={[Function]}
                            onChange={[Function]}
                            onDelete={[Function]}
                            onDown={[Function]}
                            onFocus={[Function]}
                            onSubmit={[Function]}
                            onUp={[Function]}
                            placeholder="Add items..."
                            value=""
                          >
                            <input
                              autoComplete="off"
                              className="input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              placeholder="Add items..."
                              value=""
                            />
                          </Input>
                        </div>
                      </InnerReference>
                    </Reference>
                  </DropdownToggle>
                  <DropdownMenu
                    className="options"
                    flip={true}
                    tag="div"
                  >
                    <div
                      aria-hidden={true}
                      className="options dropdown-menu"
                      role="menu"
                      tabIndex="-1"
                    >
                      <Menu
                        activeIndex={0}
                        onActivate={[Function]}
                        onSelect={[Function]}
                        options={Array []}
                      >
                        <DropdownItem
                          header={true}
                          tag="button"
                          toggle={true}
                        >
                          <h6
                            className="dropdown-header"
                            onClick={[Function]}
                            tabIndex="-1"
                          >
                            No result
                          </h6>
                        </DropdownItem>
                      </Menu>
                    </div>
                  </DropdownMenu>
                </div>
              </Manager>
            </Dropdown>
          </UncontrolledDropdown>
        </div>
      </Dropdown>
    </div>
  </div>
</MultiSelectOptionsField>
`;

exports[`MultiSelectField should render a select input with default props 2`] = `
Object {
  "allowCustomOptions": false,
  "matchInput": false,
  "onChange": [Function],
  "options": Array [],
  "plural": "items",
  "selectedOptions": Array [],
  "singular": "item",
}
`;

exports[`MultiSelectField should render a select input with default props 3`] = `
Object {
  "filteredOptions": Array [],
  "input": "",
  "isFocused": false,
}
`;

exports[`MultiSelectField should reset state on blur 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "First",
      "value": "first",
    },
    Object {
      "label": "Second",
      "value": "second",
    },
    Object {
      "label": "Third",
      "value": "third",
    },
  ],
  "input": "",
  "isFocused": false,
}
`;

exports[`MultiSelectField should update state when search changes (custom values NOT allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "hello",
  "isFocused": false,
}
`;

exports[`MultiSelectField should update state when search changes (custom values NOT allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "isFocused": false,
}
`;

exports[`MultiSelectField should update state when search changes (custom values allowed) 1`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "hello",
  "isFocused": false,
}
`;

exports[`MultiSelectField should update state when search changes (custom values allowed) 2`] = `
Object {
  "filteredOptions": Array [
    Object {
      "label": "Hello",
      "value": "hello",
    },
    Object {
      "label": "World",
      "value": "world",
    },
  ],
  "input": "",
  "isFocused": false,
}
`;

exports[`MultiSelectField should use custom props 1`] = `
Object {
  "allowCustomOptions": false,
  "matchInput": false,
  "onChange": [Function],
  "options": Array [
    Object {
      "label": "First",
      "value": "first",
    },
    Object {
      "label": "Second",
      "value": "second",
    },
    Object {
      "label": "Third",
      "value": "third",
    },
  ],
  "plural": "tags",
  "selectedOptions": Array [],
  "singular": "tag",
}
`;
